force-app/main/default/objects/Contact/fields/ACV_Trailing_12_Months__c.field-meta.xml
<CustomField>
    <fullName>ACV_Trailing_12_Months__c</fullName>
    <label>ACV Trailing 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>