force-app/main/default/objects/Contact/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <inlineHelpText>VIP - 40% discount, access to spa, car discount,premium Wi-Fi
Standard - discount based on num of TTM Reservations.
Internal Employee- 70% discount + VIP</inlineHelpText>
    <label>Customer Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Internal Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>