force-app/main/default/objects/Contact/fields/Visits_Last_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Visits_Last_12_Month__c</fullName>
    <label>Visits Last 12 Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>